# cabinet

./: .env.example  .gitignore  AGENT (2).md  AGENT.md  AGENT1.md  AGENT2.md  AGENTS.md  AUDIT.md  Autocontent Spec.htm  AutocontentSpec.htm  Autocontent_Spec.md  CANON_GAPS.md  CODEX_INSTRUCTIONS.md  ENCRYPTION-SCHEME.md  EXTENDING.md  FINAL_SUMMARY.md  HIERARCHY-GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION-COMPLETE.md  MIGRATION-GUIDE.md  MONOREPO-README.md  MVP_ARCHITECTURE.md  MVP_SUMMARY.md  Makefile  PHASE2-4.md  PHASE6.md  PHASE6_DIAGRAMS.md  PHASE6_SUMMARY.md  PLANS.md  README.md  SCHEMAS_TODO.md  SECURITY-IMPLEMENTATION.md  STEP-6A-SUMMARY.md  STEP-7-SUMMARY.md  STEP-8-SUMMARY.md  STEP9_FUTURE.md  STEPS_6-9_COMPLETE.md  STEPS_7-9_IMPLEMENTATION.md  STRUCTURE.clean.txt  (+20 more)
adapters/: README.md
ci/: README.md
kernel/: Cargo.toml  README.md
kernel/examples/: basic_usage.rs
kernel/src/: lib.rs  tests.rs
kernel/src/authz/: authorize.rs  capabilities.rs  mod.rs  roles.rs
kernel/src/config/: load_manifests.rs  load_routes.rs  load_system.rs  mod.rs
kernel/src/ipc/: decode.rs  encode.rs  mod.rs  validate.rs
kernel/src/observed/: audit_events.rs  mod.rs  module_status.rs
kernel/src/primitives/: hash.rs  ids.rs  mod.rs  stable_sort.rs
kernel/src/result_gate/: mod.rs  redaction.rs  size_limits.rs  validate_shape.rs
kernel/src/routing/: authorize_route.rs  graph.rs  mod.rs  resolve_endpoint.rs
kernel/src/sandbox/: fs_jail.rs  limits.rs  mod.rs  spawn.rs
kernel/tests/: ipc_roundtrip.rs  primitives_hash.rs  primitives_ids.rs
(+850 files in other folders)
