[package]
name = "kernel"
version = "1.0.0"
edition = "2021"

[lib]
name = "kernel"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

[[example]]
name = "kernel_demo"
path = "examples/kernel_demo.rs"
